5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1674_1104.log
== SUBMITION (2019-04-29 21:02:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("valor de A: "))
b = float(input("valor de B: "))
c = float(input("valor de C: "))
d = float(input("valor de D: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if(b<=a)or(d<=c):
	print("Entradas invalidas")
elif(b<c):
	print("Nao ha intersecao"):
else:
	print("Ha intersecao")

-- EXECUTION TIME:
0.121367
-- ERROR:
  File "/home/codebench/codes/1674/1104/main.py", line 13
    print("Nao ha intersecao"):
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:02:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("valor de A: "))
b = float(input("valor de B: "))
c = float(input("valor de C: "))
d = float(input("valor de D: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if(b<=a)or(d<=c):
	print("Entradas invalidas")
elif(b<c):
	print("Nao ha intersecao"):
else:
	print("Ha intersecao")

-- ERROR:
File "XXXX", line 13
    print("Nao ha intersecao"):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:03:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = float(input("valor de A: "))
b = float(input("valor de B: "))
c = float(input("valor de C: "))
d = float(input("valor de D: "))
print("Intervalo 1: ",a,",",b)
print("Intervalo 2: ",c,",",d)
if(b<=a)or(d<=c):
	print("Entradas invalidas")
elif(b<c):
	print("Nao ha intersecao")
else:
	print("Ha intersecao")

-- EXECUTION TIME:
0.209978
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
